<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="bytesize"
            type="uk.laxd.bytesize.ByteSize"/>
        <variable
            name="image"
            type="uk.laxd.androiddocker.dto.DockerImageDetail"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/Label"
            android:labelFor="@+id/image_id"
            android:text="@string/id" />

        <TextView
            android:id="@+id/image_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{image.id}"/>

        <TextView
            style="@style/Label"
            android:labelFor="@+id/image_tags"
            android:text="@string/image_tags" />

        <ListView
            android:id="@+id/image_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:items="@{image.tags}"
            app:itemBinding="@{image.tagsBinding}"/>

        <TextView
            style="@style/Label"
            android:labelFor="@+id/image_size"
            android:text="@string/size" />

        <TextView
            android:id="@+id/image_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{bytesize.getFormattedFileSize(image.size)}"/>
    </LinearLayout>
</layout>